// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings_actions saveSettings Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "payload": Object {
      "language": "ar",
    },
    "type": "SAVE_SETTINGS",
  },
]
`;

exports[`settings_actions setReadyStatus Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "type": "SET_READY_STATUS",
  },
]
`;
